# TIPE

./: .gitignore  README.md  TODO.md  a.tipe  dune  dune-project  equality.tipe  flake.nix  formula.ml  formula.mli  lambda.ml  lambda.mli  lambdaD.ml  lambdaD.mli  lexer.mli  lexer.mll  main.ml  parser.mly  result  sequent.ml  sequent.mli  syntax.ml  syntax.mli  syntaxD.ml  syntaxD.mli  test.tipe  test2.tipe
