(ocamllex "lexer")

(menhir
 (modules "parser"))

(executable
 (name main)
 (libraries)
 (modules
  ("main" "lambda" "lexer" "parser" "syntax")))
 
(env
 (tipe
  (flags
   (-w
    @1..3@5..28@30..39@43@46..47@49..57@61..62-40
    -strict-sequence
    -strict-formats
    -short-paths
    -keep-locs))
  (ocamlc_flags (-g))
  (ocamlopt_flags (-g))
  (c_flags
   (-O2 -fno-strict-aliasing -fwrapv -fPIC))
  (cxx_flags
   (-O2 -fno-strict-aliasing -fwrapv -fPIC))
  (menhir_flags ())
 )
 (tipe_debug
  (flags
   (-w -40))
  (ocamlc_flags (-g))
  (ocamlopt_flags (-g))
  (c_flags
   (-O2 -fno-strict-aliasing -fwrapv -fPIC))
  (cxx_flags
   (-O2 -fno-strict-aliasing -fwrapv -fPIC))
  (menhir_flags ())
 )
)

(install
 (package tipe)
 (section bin)
 (files (main.exe as tipe.exe)))

(install
 (package tipe_debug)
 (section bin)
 (files (main.exe as tipe_debug.exe)))